--- a/src/sample/table.fxml
+++ b/src/sample/table.fxml
@@ -1,35 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextArea?>
-<?import javafx.scene.effect.BoxBlur?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="743.0" prefWidth="1185.0" style="-fx-background-color: #2e3348;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller2">
+<AnchorPane fx:id="anchRoot" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1185.0" style="-fx-background-color: #708090;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller2">
     <children>
-        <AnchorPane layoutX="40.0" layoutY="22.0" prefHeight="620.0" prefWidth="1203.0" style="-fx-background-color: #708090;">
+      <TextArea fx:id="txt1" blendMode="MULTIPLY" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseDragExited="#initialize" prefHeight="420.0" prefWidth="895.0" scrollLeft="10.0" scrollTop="10.0" style="-fx-background-color: #708090;" text="Компьютер мен Билл Гейтс құдды егіз ұғымдай. Иә, дүниежүзі білетін Microsoft компаниясының негізін қалап, бізді &quot;терезелерге&quot; қаратып отырған осы кісі емес пе? Заманауи компьютерлік технологиялардың дамығаны осы кісінің қажырлы еңбегінің арқасы емес пе? " wrapText="true" AnchorPane.leftAnchor="290.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="1.0">
+         <font>
+            <Font name="Baskerville Old Face" size="24.0" />
+         </font>
+      </TextArea>
+      <HBox fx:id="h1" layoutX="300.0" layoutY="423.0" prefHeight="37.0" prefWidth="277.0" scaleShape="false" scaleZ="0.0">
          <children>
-            <StackPane fx:id="pl" layoutX="-1.0" prefHeight="710.0" prefWidth="290.0" style="-fx-background-color: bbbbbb;">
-               <effect>
-                  <BoxBlur width="0.0" />
-               </effect></StackPane>
-            <TextArea fx:id="txt1" blendMode="MULTIPLY" layoutX="290.0" layoutY="7.0" onMouseDragExited="#initialize" prefHeight="420.0" prefWidth="913.0" scrollLeft="10.0" scrollTop="10.0" style="-fx-background-color: #708090;" text="Компьютер мен Билл Гейтс құдды егіз ұғымдай. Иә, дүниежүзі білетін Microsoft компаниясының негізін қалап, бізді &quot;терезелерге&quot; қаратып отырған осы кісі емес пе? Заманауи компьютерлік технологиялардың дамығаны осы кісінің қажырлы еңбегінің арқасы емес пе? " wrapText="true">
-               <font>
-                  <Font name="Baskerville Old Face" size="24.0" />
-               </font></TextArea>
-            <TextArea fx:id="txt2" layoutX="290.0" layoutY="425.0" prefHeight="285.0" prefWidth="913.0" wrapText="true">
-               <font>
-                  <Font name="Arial" size="18.0" />
-               </font>
-            </TextArea>
-         </children>
-        </AnchorPane>
-        <Label layoutX="281.0" layoutY="14.0" prefHeight="60.0" prefWidth="139.0" text="IlyasFX" textFill="#d7aeae">
-            <font>
-                <Font name="Blackadder ITC" size="36.0" />
-            </font>
-        </Label>
+            <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" text="Button" />
+            <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" text="Button" />
+         </children></HBox>
+      <TextArea fx:id="txt2" prefHeight="268.0" prefWidth="895.0" wrapText="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="290.0" AnchorPane.rightAnchor="0.0">
+         <font>
+            <Font name="Arial" size="18.0" />
+         </font>
+      </TextArea>
+      <StackPane fx:id="pl" prefHeight="720.0" prefWidth="290.0" style="-fx-background-color: bbbbbb;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
     </children>
 </AnchorPane>
