--- a/src/sample/table.fxml
+++ b/src/sample/table.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -9,19 +10,23 @@
 
 <AnchorPane fx:id="anchRoot" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1185.0" style="-fx-background-color: #708090;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller2">
     <children>
-      <TextArea fx:id="txt1" blendMode="MULTIPLY" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseDragExited="#initialize" prefHeight="420.0" prefWidth="895.0" scrollLeft="10.0" scrollTop="10.0" style="-fx-background-color: #708090;" text="Компьютер мен Билл Гейтс құдды егіз ұғымдай. Иә, дүниежүзі білетін Microsoft компаниясының негізін қалап, бізді &quot;терезелерге&quot; қаратып отырған осы кісі емес пе? Заманауи компьютерлік технологиялардың дамығаны осы кісінің қажырлы еңбегінің арқасы емес пе? " wrapText="true" AnchorPane.leftAnchor="290.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="1.0">
+      <HBox fx:id="h1" fillHeight="false" focusTraversable="true" layoutX="290.0" layoutY="342.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="37.0" prefWidth="277.0">
+         <children>
+            <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" text="Button" />
+            <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" text="Button" />
+         </children>
+         <padding>
+            <Insets bottom="1.0" left="1.0" />
+         </padding>
+      </HBox>
+      <TextArea fx:id="txt1" blendMode="MULTIPLY" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseDragExited="#initialize" prefHeight="343.0" prefWidth="895.0" scrollLeft="10.0" scrollTop="10.0" style="-fx-background-color: #708090;" text="Компьютер мен Билл Гейтс құдды егіз ұғымдай. Иә, дүниежүзі білетін Microsoft компаниясының негізін қалап, бізді &quot;терезелерге&quot; қаратып отырған осы кісі емес пе? Заманауи компьютерлік технологиялардың дамығаны осы кісінің қажырлы еңбегінің арқасы емес пе? " wrapText="true" AnchorPane.leftAnchor="290.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <font>
             <Font name="Baskerville Old Face" size="24.0" />
          </font>
       </TextArea>
-      <HBox fx:id="h1" layoutX="300.0" layoutY="423.0" prefHeight="37.0" prefWidth="277.0" scaleShape="false" scaleZ="0.0">
-         <children>
-            <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" text="Button" />
-            <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" text="Button" />
-         </children></HBox>
-      <TextArea fx:id="txt2" prefHeight="268.0" prefWidth="895.0" wrapText="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="290.0" AnchorPane.rightAnchor="0.0">
+      <TextArea fx:id="txt2" blendMode="MULTIPLY" minHeight="-Infinity" minWidth="-Infinity" prefHeight="343.0" prefWidth="895.0" style="-fx-background-color: #708090;" wrapText="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="290.0" AnchorPane.rightAnchor="0.0">
          <font>
-            <Font name="Arial" size="18.0" />
+            <Font name="Baskerville Old Face" size="24.0" />
          </font>
       </TextArea>
       <StackPane fx:id="pl" prefHeight="720.0" prefWidth="290.0" style="-fx-background-color: bbbbbb;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
