--- a/src/sample/TextTranslate.fxml
+++ b/src/sample/TextTranslate.fxml
@@ -3,16 +3,18 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="anchRoot" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1185.0" style="-fx-background-color: #708090;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.ControllerTextTranslation">
     <children>
-      <HBox fx:id="h1" fillHeight="false" focusTraversable="true" layoutX="6.0" layoutY="345.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="31.0" prefWidth="622.0">
+      <HBox fx:id="h1" fillHeight="false" focusTraversable="true" layoutX="6.0" layoutY="345.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="31.0" prefWidth="936.0">
          <children>
+             <TextField fx:id="txtfield" accessibleText="tyu" alignment="CENTER" layoutX="628.0" layoutY="348.0" prefHeight="25.0" prefWidth="682.0" />
             <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" text="Button" />
-            <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" text="Button" />
+            <Button fx:id="link" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" text="link" />
          </children>
          <padding>
             <Insets bottom="1.0" left="1.0" />
@@ -28,5 +30,6 @@
             <Font name="Baskerville Old Face" size="24.0" />
          </font>
       </TextArea>
+
     </children>
 </AnchorPane>
